# gitfs

./: Cargo.toml  MODULE.bazel  README.asciidoc
gitfs/: BUILD.bazel  gitfs.rs  gitfs_main.rs
