load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "gitfs",
    srcs = [
        "gitfs.rs",
        "gitfs_main.rs",
    ],
    crate_root = "gitfs_main.rs",
    edition = "2021",
    deps = [
        "@com_github_jmillikin_rust-fuse//fuse",
        "@com_github_jmillikin_rust-fuse//fuse-libc",
        "@com_github_jmillikin_rust-fuse//fuse-std",
        "@com_github_jmillikin_rust-fuse//fuse-vfs",
        "@com_github_rust-lang_git2-rs_git2//:git2",
        "@com_github_rust-lang_libc//:libc",
    ],
)
